Added authorization part 1
