# docs/swagger.yaml
@@ -25,6 +25,13 @@ definitions:
       total:
         type: integer
     type: object
+  model.Credentials:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   model.ExplTest:
     properties:
       area-id:
@@ -202,6 +209,41 @@ paths:
       summary: Get all area features
       tags:
       - feature
+  /api/v1/auth/refresh:
+    post:
+      description: Checks if the token is valid and refreshes the token when expiry
+        is within 60 seconds and returns the new token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Refresh the bearer token
+      tags:
+      - user
+  /api/v1/auth/signin:
+    post:
+      description: Signin and returning a JWT token if user name and password are
+        correct
+      parameters:
+      - description: Credentials JSON
+        in: body
+        name: signin
+        required: true
+        schema:
+          $ref: '#/definitions/model.Credentials'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Signin of a user
+      tags:
+      - user
   /api/v1/coverage/{id}/areas:
     get:
       description: Get coverage for all product areas. Only tests from the last 28
