# user/model/signin.go
@@ -1,0 +1,26 @@
+/*
+Copyright (c) 2022, webmaster@testandwin.net, Michael Schlottmann
+All rights reserved.
+
+This source code is licensed under the BSD-style license found in the
+LICENSE file in the root directory of this source tree.
+*/
+
+package model
+
+import "github.com/golang-jwt/jwt/v4"
+
+type Credentials struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type Claims struct {
+	Email string `json:"email"`
+	Role  string `json:"role"`
+	jwt.RegisteredClaims
+}
+
+const CONSUMER = "c"
+const EDITOR = "e"
+const ADMIN = "a"
